Got rid of lengthy print statement

--- a/scaper.ipynb
+++ b/scaper.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "5e3ed5ab",
    "metadata": {},
    "outputs": [
@@ -3686,7 +3686,7 @@
     }
    ],
    "source": [
-    "print(pretty_soup)"
+    "#print(pretty_soup)"
    ]
   },
   {
